@@ -107,15 +107,15 @@ var CloudCommander, Util, DOM, $;
             ]) );
         
         /* добавляем обработчик клавишь */
-       DOM.addKeyListener(function(){
+       DOM.addKeyListener(function(pEvent){
             /* если клавиши можно обрабатывать */
             if(Hidden && KeyBinding.get()    &&
-                event.keyCode === cloudcmd.KEY.TRA){
+                pEvent.keyCode === cloudcmd.KEY.TRA){
                     JqueryTerminal.show();
-                    event.preventDefault();
+                    pEvent.preventDefault();
                 }
             
-            else if(!Hidden && event.keyCode === cloudcmd.KEY.ESC)
+            else if(!Hidden && pEvent.keyCode === cloudcmd.KEY.ESC)
                 JqueryTerminal.hide();
         });
     };
