@@ -193,16 +193,16 @@ var CloudCommander, Util, DOM, CloudFunc, $;
             FancyBox.show( DOM.getCurrentFile() );
         };
         
-        var lKeyListener = function(){
+        var lKeyListener = function(pEvent){
             var lF3         = cloudcmd.KEY.F3,
                 lKeyBinded  = KeyBinding.get(),
-                lKey        = event.keyCode,
-                lShift      = event.shiftKey;
+                lKey        = pEvent.keyCode,
+                lShift      = pEvent.shiftKey;
             
             /* если клавиши можно обрабатывать */
             if( lKeyBinded && lKey === lF3 && lShift ){
                 lView();
-                event.preventDefault();
+                pEvent.preventDefault();
             }
         };        
         
