@@ -22,6 +22,9 @@ not '.json' extension, it's added to the and of filename.
 * Fixed bug in not fully functional browsers,
 jquery loaded after ie.js, should be before.
 
+* Fixed bug with closing terminal and opening viewer:
+inside event function varible called event do not exist
+(everithing ok on webkit).
 
 2012.12.12, Version 0.1.8
 
